feat: ignore internal fields
